<resources>
    <string name="app_name">Practica7.1</string>
    <string name="app_id">1547272998930971</string>
    <string name="hello_world">hello world</string>
    <string name="Iniciar_sesion">Iniciar sesion</string>
    <string name="btnSignout">signout</string>
    <string name="signed_out">^-^</string>
    <string name="signed_out2">fuera¦</string>
    <string name="loading">Loading</string>
    <string name="signed_in_fmt">Usuario: </string>
    <string name="signed_in_fmt2">Correo: </string>
    <string name="usuario">Usuario: </string>
    <string name="contrasenia">Password: </string>
    <string name="Registrarse">Registrarse aquí: </string>
    <string name="Titutlo_principal">BIENVENIDO: </string>
    <string name="inicio_alterno">Puedes ingresar también con tu facebook o cuenta de google</string>
    <string name="Nombre">nombre</string>



    <string name="server_client_id">548487707618-rr7ln0267ftfumv66i5btkci4p4bbq4l.apps.googleusercontent.com</string>
</resources>
