<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gainsboro">


    <Space
        android:layout_width="match_parent"
        android:layout_height="50sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nombre"
        android:gravity="center"
        android:id="@+id/ETnombre"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:gravity="center"
        android:id="@+id/ETusuario"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasenia"
        android:gravity="center"
        android:id="@+id/Etpaswword"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="40sp" />
    />
    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Enviar datos"
        android:id="@+id/BTregistrarse"
        android:onClick="Guardar_datos"
        />



</LinearLayout>
